--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ECG_Evaluation/__pycache__/
 ECG_Evaluation/Views/__pycache__/
 ECG_Evaluation/Processors/__pycache__/
 ECG_Evaluation/Scrapers/__pycache__/
+ECG_Evaluation/Processors/ManageData/__pycache__/
