Update MongoDB to localhost

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Streamlit",
             "type": "python",
             "request": "launch",
-            "module": "streamlit.cli",
+            "module": "streamlit",
             "args": [
             "run",
             "${file}",
