Fix bugs + Update values for configuration file

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -9,8 +9,12 @@ db_name = "ECG"
 collection_ecg_name = "ecg"
 collection_channel_name = "channel"
 collection_record_set_name = "recordSet"
-collection_template_exportation_name = "templateExportation"
+collection_exporting_template_name = "exportingTemplate"
 
 [configure]
 format_descriptor = "WFDB;SciPy"
 channel_name = "I;II;III;aVR;aVL;aVF;V1;V2;V3;V4;V5;V6;Vx;Vy;Vz"
+default_folder_import_record = "C:\\Users\\HuyDQ\\Downloads\\New folder"
+default_folder_import_record_mass = "C:\\Users\\HuyDQ\\Downloads\\New folder"
+default_folder_export_data = "C:\\Users\\HuyDQ\\Downloads\\Export Data"
+default_folder_temp = "C:\\Users\\HuyDQ\\Downloads\\Temp Folder"
