--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -14,7 +14,6 @@ collection_exporting_template_name = "exportingTemplate"
 [configure]
 format_descriptor = "WFDB;SciPy"
 channel_name = "I;II;III;aVR;aVL;aVF;V1;V2;V3;V4;V5;V6;Vx;Vy;Vz"
-default_folder_import_record = "C:\\Users\\HuyDQ\\Downloads\\New folder"
-default_folder_import_record_mass = "C:\\Users\\HuyDQ\\Downloads\\New folder"
+default_folder_import_record = "C:\\Users\\HuyDQ\\Downloads"
+default_folder_import_record_mass = "C:\\Users\\HuyDQ\\Downloads"
 default_folder_export_data = "C:\\Users\\HuyDQ\\Downloads\\Export Data"
-default_folder_temp = "C:\\Users\\HuyDQ\\Downloads\\Temp Folder"
