Add 'Exporting Region' function + Refactor code + fix bugs

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -10,6 +10,7 @@ collection_ecg_name = "ecg"
 collection_channel_name = "channel"
 collection_record_set_name = "recordSet"
 collection_exporting_template_name = "exportingTemplate"
+collection_exporting_region_name = "exportingRegion"
 
 [configure]
 format_descriptor = "WFDB;SciPy"
